[gd_scene load_steps=2 format=3 uid="uid://c1c8vyfyanpjj"]

[ext_resource type="Script" path="res://Scripts/Inventory/ItemSlot.gd" id="2_broc3"]

[node name="ItemSlot" type="TextureButton" groups=["ItemSlots"]]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_broc3")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 3

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
